Fix the modal dialog lock body scroll function, remove dialog after close, Ask participant to choose email follow option after posting comment or idea, Simplify follow dialog and automatically dismiss ack, different follow form for follow link and after post, fix the overflow-y to auto instead of scroll(always)

--- a/app/assets/stylesheets/ce/idea_details.sass
+++ b/app/assets/stylesheets/ce/idea_details.sass
@@ -1,5 +1,8 @@
 @import "definitions"
-		
+
+div.idea_details.ui-dialog-content
+	overflow-x: hidden
+	
 div.idea_details
 	position: relative
 	width: 460px
